Add Spivak notes

--- a/notes/calculus/spivak/spivak_notes.tex
+++ b/notes/calculus/spivak/spivak_notes.tex
@@ -9,6 +9,11 @@
 \usepackage{subfigure}
 \usepackage{makeidx}
 \usepackage{multicol}
+\usepackage{amsthm}
+
+%% custom definitions
+\newtheorem{definition}{Definition}
+\newtheorem{property}{Property}
 
 %\usepackage[dvips]{hyperref}
 
