More Spivak Ch1

--- a/notes/calculus/spivak/spivak_notes.tex
+++ b/notes/calculus/spivak/spivak_notes.tex
@@ -10,6 +10,7 @@
 \usepackage{makeidx}
 \usepackage{multicol}
 \usepackage{amsthm}
+\usepackage{enumitem}
 
 %% custom definitions
 \newtheorem{definition}{Definition}
