More spivak ch1

--- a/notes/calculus/spivak/spivak_notes.tex
+++ b/notes/calculus/spivak/spivak_notes.tex
@@ -11,10 +11,12 @@
 \usepackage{multicol}
 \usepackage{amsthm}
 \usepackage{enumitem}
+\usepackage{mdframed}
 
 %% custom definitions
-\newtheorem{definition}{Definition}
 \newtheorem{property}{Property}
+\newmdtheoremenv{definition}{Definition}
+\newmdtheoremenv{theorem}{Theorem}
 
 %\usepackage[dvips]{hyperref}
 
