--- a/notes/probability-theory/jaynes/jaynes_notes.tex
+++ b/notes/probability-theory/jaynes/jaynes_notes.tex
@@ -41,6 +41,16 @@
 
 \mainmatter
 
+\chapter*{Prologue}
+
+\begin{quotation}
+    A scientist who has learned how to use probability theory directly as extended logic
+    has a great advantage in power and versatility over one who has learned only a
+    collection of unrelated \emph{ad hoc} devices. As the complexity of our problems
+    increases, so does this relative advantage.\\
+    \hfill -- Edwin Jayes, p. xxviii
+\end{quotation}
+
 \part{Principles and Elementary Applications}
 \include{chapters/chapter1/chapter1}
 %\include{chapters/chapter2/ch2}
