--- a/subjects/statistics/rethinking/packages.bib
+++ b/subjects/statistics/rethinking/packages.bib
@@ -11,8 +11,8 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 0.35},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  note = {R package version 0.36},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-DiagrammeR,
@@ -23,19 +23,11 @@
   url = {https://github.com/rich-iannone/DiagrammeR},
 }
 
-@Manual{R-igraph,
-  title = {igraph: Network Analysis and Visualization},
-  author = {See AUTHORS file.},
-  year = {2022},
-  note = {R package version 1.3.5},
-  url = {https://CRAN.R-project.org/package=igraph},
-}
-
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.42},
+  note = {R package version 1.44},
   url = {https://yihui.org/knitr/},
 }
 
@@ -44,7 +36,7 @@
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2023},
   note = {R package version 2.20},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Book{bookdown2016,
@@ -55,16 +47,6 @@
   year = {2016},
   isbn = {978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
-}
-
-@Article{igraph2006,
-  title = {The igraph software package for complex network research},
-  author = {Gabor Csardi and Tamas Nepusz},
-  journal = {InterJournal},
-  volume = {Complex Systems},
-  pages = {1695},
-  year = {2006},
-  url = {https://igraph.org},
 }
 
 @Book{knitr2015,
